--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,27 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+:root {
+	--saffron-color: #F0C133;
+	--parchment-color: #F5EACC;
+	--flax-color: #FCE993;
+	--ochre-color: #CE7602;
+	--goldenrod-color: #E0AF39;
+	--dutch-color: #F9EABE;
+	--seal-color: #4D2712;
+	--drab-color:#4E3C1B;
+	--outer-color:#41545C;
+	--alabaster-color: #EFF0E9;
+	--inti-color: #fac463;
+
+	--style1-color: var(--saffron-color);
+	--style2-color: var(--ochre-color);
+	--style3-color: var(--seal-color);
+	--style4-color: var(--outer-color);
+	--style5-color: var(--goldenrod-color);
+
+}
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -100,10 +121,10 @@ input, select, textarea {
 
 	body {
 		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		/* background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%); */
+		/* background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%); */
+		/* background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%); */
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #CE7602 15%, #F9EABE 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2291,23 +2312,23 @@ input, select, textarea {
 			}
 
 		.icon.style1 {
-			color: #efa8b0;
+			color: var(--style1-color);
 		}
 
 		.icon.style2 {
-			color: #c79cc8;
+			color: var(--style2-color);
 		}
 
 		.icon.style3 {
-			color: #a89cc8;
+			color: var(--style3-color);
 		}
 
 		.icon.style4 {
-			color: #9bb2e1;
+			color: var(--style4-color);
 		}
 
 		.icon.style5 {
-			color: #8cc9f0;
+			color: var(--style5-color);
 		}
 
 		@media screen and (max-width: 1680px) {
@@ -2884,23 +2905,23 @@ input, select, textarea {
 		}
 
 			.statistics li.style1 {
-				background-color: #efa8b0;
+				background-color: var(--style1-color);
 			}
 
 			.statistics li.style2 {
-				background-color: #c79cc8;
+				background-color: var(--style2-color);
 			}
 
 			.statistics li.style3 {
-				background-color: #a89cc8;
+				background-color: var(--style3-color);
 			}
 
 			.statistics li.style4 {
-				background-color: #9bb2e1;
+				background-color: var(--style4-color);
 			}
 
 			.statistics li.style5 {
-				background-color: #8cc9f0;
+				background-color: var(--style5-color);
 			}
 
 			.statistics li strong, .statistics li b {
@@ -3090,9 +3111,14 @@ input, select, textarea {
 		}
 
 			#header.alt h1 {
-				font-size: 3.25em;
+				font-size: 8.25em;
+				font-weight: 100;
 			}
 
+			#header.alt h3 {
+				font-size: 3.25em;
+				font-weight: 100;
+			}
 			#header.alt > * {
 				-moz-transition: opacity 3s ease;
 				-webkit-transition: opacity 3s ease;
@@ -3122,7 +3148,7 @@ input, select, textarea {
 					display: block;
 					margin: 0 auto;
 					max-width: 75%;
-          max-height: 300px;
+					max-height: 300px;
 				}
 
 		@media screen and (max-width: 1280px) {
