--- a/style.css
+++ b/style.css
@@ -2020,6 +2020,7 @@ blockquote, .content-aside {
   font-size: 2.8rem;
 }
 
+
 .more-link, header nav {
   font-size: 24px;
   font-size: 2.4rem;
@@ -2101,6 +2102,11 @@ footer.footer, .widget {
   font-size: 65px;
   font-size: 6.5rem;
 }
+
+#logo {
+  max-height: 200px;
+}
+
 
 /* Font Weights */
 .site-title,
